syntax = "proto3";

package mandu.subscription;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "mandu/subscription/params.proto";
import "mandu/subscription/subscription.proto";

option go_package = "mandu/x/subscription/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/mandu/subscription/params";
  }

  rpc SubscriptionRequest(QuerySubscriptionRequestRequest) returns (QuerySubscriptionRequestResponse) {
    option (google.api.http).get = "/mandu/subscription/subscription_request/{id}";
  }

  rpc SubscriptionRequestStatus(QuerySubscriptionRequestStatusRequest) returns (QuerySubscriptionRequestStatusResponse) {
    option (google.api.http).get = "/mandu/subscription/subscription_request_status/{id}";
  }

  rpc SubscriptionRequests(QuerySubscriptionRequestsRequest) returns (QuerySubscriptionRequestsResponse) {
    option (google.api.http).get = "/mandu/subscription/subscription_requests/{requester}";
  }

  rpc Subscription(QuerySubscriptionRequest) returns (QuerySubscriptionResponse) {
    option (google.api.http).get = "/mandu/subscription/subscription/{id}";
  }

  rpc Subscriptions(QuerySubscriptionsRequest) returns (QuerySubscriptionsResponse) {
    option (google.api.http).get = "/mandu/subscription/subscriptions/{subscriber}";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

message QuerySubscriptionRequestRequest {
  string id = 1;
}

message QuerySubscriptionRequestResponse {
  mandu.subscription.SubscriptionRequest subscription_request = 1 [(gogoproto.nullable) = false];
}

message QuerySubscriptionRequestStatusRequest {
  string id = 1;
}

message QuerySubscriptionRequestStatusResponse {
  mandu.subscription.SubscriptionRequest.Status status = 1;
}

message QuerySubscriptionRequestsRequest {
  string requester = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QuerySubscriptionRequestsResponse {
  repeated mandu.subscription.SubscriptionRequest subscription_requests = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QuerySubscriptionRequest {
  string id = 1;
}

message QuerySubscriptionResponse {
  mandu.subscription.Subscription subscription = 1 [(gogoproto.nullable) = false];
}

message QuerySubscriptionsRequest {
  string subscriber = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QuerySubscriptionsResponse {
  repeated mandu.subscription.Subscription subscriptions = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
